force-app/main/default/objects/TariffMaster__c/fields/Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>SVC_MASTER</relationshipName>
    <type>Lookup</type>
</CustomField>