force-app/main/default/objects/TariffMaster__c/fields/AvailableHarbor__c.field-meta.xml
<CustomField>
    <fullName>AvailableHarbor__c</fullName>
    <label>AVAILABLE PORT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add the port list here</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>