force-app/main/default/objects/TariffMaster__c/fields/BuyAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>BuyAmountUSD__c</fullName>
    <inlineHelpText>Input the number and it will be automatically inserted to Unit Price of Buying(USD) in HB/L S/B if the field is blank</inlineHelpText>
    <label>UNIT PRICE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>