force-app/main/default/objects/TariffMaster__c/fields/BuyKingaku__c.field-meta.xml
<CustomField>
    <fullName>BuyKingaku__c</fullName>
    <inlineHelpText>Input the number and it will be automatically inserted to Unit Price of Buying(Local) in HB/L S/B if the field is blank</inlineHelpText>
    <label>UNIT PRICE OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>