force-app/main/default/objects/TariffMaster__c/fields/Carrier_Code__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARRIER/AIRLINER CODE</label>
    <referenceTo>Carrier_Code__c</referenceTo>
    <relationshipLabel>SVC PRICING</relationshipLabel>
    <relationshipName>SERVICE_MASTERS</relationshipName>
    <type>Lookup</type>
</CustomField>