force-app/main/default/objects/TariffMaster__c/fields/CarType__c.field-meta.xml
<CustomField>
    <fullName>CarType__c</fullName>
    <label>VEHICLE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2Ton</fullName>
            </value>
            <value>
                <fullName>2Ton Long</fullName>
            </value>
            <value>
                <fullName>4Ton</fullName>
            </value>
            <value>
                <fullName>10Ton</fullName>
            </value>
            <value>
                <fullName>4Ton consol</fullName>
            </value>
            <value>
                <fullName>2Ton Powergate</fullName>
            </value>
            <value>
                <fullName>2Ton Air Suspension</fullName>
            </value>
            <value>
                <fullName>2Ton Long Powergate</fullName>
            </value>
            <value>
                <fullName>2Ton Long Air Suspension</fullName>
            </value>
            <value>
                <fullName>4Ton Powergate</fullName>
            </value>
            <value>
                <fullName>4Ton Air Suspension</fullName>
            </value>
            <value>
                <fullName>10Ton Powergate</fullName>
            </value>
            <value>
                <fullName>10Ton Air Suspension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>