force-app/main/default/objects/TariffMaster__c/fields/Chasis__c.field-meta.xml
<CustomField>
    <fullName>Chasis__c</fullName>
    <label>CHASSIS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>通常</fullName>
                <label>Normal</label>
            </value>
            <value>
                <fullName>三軸</fullName>
                <label>3 Axis</label>
            </value>
            <value>
                <fullName>四軸</fullName>
                <label>4 Axis</label>
            </value>
            <value>
                <fullName>低装</fullName>
                <label>Low Deck</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>