force-app/main/default/objects/TariffMaster__c/fields/COMMODITY__c.field-meta.xml
<CustomField>
    <fullName>COMMODITY__c</fullName>
    <label>COMMODITY DETAIL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>