force-app/main/default/objects/TariffMaster__c/fields/CommodityCategory__c.field-meta.xml
<CustomField>
    <fullName>CommodityCategory__c</fullName>
    <label>COMMODITY CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductCategory</valueSetName>
    </valueSet>
</CustomField>