force-app/main/default/objects/TariffMaster__c/fields/ContainerSize__c.field-meta.xml
<CustomField>
    <fullName>ContainerSize__c</fullName>
    <label>CONTAINER SIZE</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UNIT__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>20&apos;All</fullName>
            </value>
            <value>
                <fullName>40&apos;All</fullName>
            </value>
            <value>
                <fullName>20&apos;DC</fullName>
            </value>
            <value>
                <fullName>2*20&apos;DC</fullName>
            </value>
            <value>
                <fullName>40&apos;DC</fullName>
            </value>
            <value>
                <fullName>45&apos;DC</fullName>
            </value>
            <value>
                <fullName>40&apos;HC</fullName>
            </value>
            <value>
                <fullName>45&apos;HC</fullName>
            </value>
            <value>
                <fullName>20&apos;RF</fullName>
            </value>
            <value>
                <fullName>40&apos;RF</fullName>
            </value>
            <value>
                <fullName>45&apos;RF</fullName>
            </value>
            <value>
                <fullName>20&apos;OT</fullName>
            </value>
            <value>
                <fullName>40&apos;OT</fullName>
            </value>
            <value>
                <fullName>45&apos;OT</fullName>
            </value>
            <value>
                <fullName>20&apos;FR</fullName>
            </value>
            <value>
                <fullName>40&apos;FR</fullName>
            </value>
            <value>
                <fullName>BULK</fullName>
            </value>
            <value>
                <fullName>20&apos;ISO</fullName>
            </value>
            <value>
                <fullName>40&apos;ISO</fullName>
            </value>
            <value>
                <fullName>20&apos;IMO</fullName>
            </value>
            <value>
                <fullName>40&apos;IMO</fullName>
            </value>
            <value>
                <fullName>45&apos;IMO</fullName>
            </value>
            <value>
                <fullName>20&apos;DC-Flexitank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>