force-app/main/default/objects/TariffMaster__c/fields/ContractID__c.field-meta.xml
<CustomField>
    <fullName>ContractID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONTRACT ID</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>SVC PRICING</relationshipLabel>
    <relationshipName>SVCPricing</relationshipName>
    <type>Lookup</type>
</CustomField>