force-app/main/default/objects/TariffMaster__c/fields/CustomCategory__c.field-meta.xml
<CustomField>
    <fullName>CustomCategory__c</fullName>
    <label>CUSTOMS CLEARANCE CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>一般通関</fullName>
                <default>true</default>
                <label>Normal Custom Clearance</label>
            </value>
            <value>
                <fullName>暫定八条</fullName>
                <label>Custom Clearance - Special Act. for Tax Reduction</label>
            </value>
            <value>
                <fullName>食品申請</fullName>
                <label>Custom Clearance - Food Quarantine</label>
            </value>
            <value>
                <fullName>薬事申請</fullName>
                <label>Custom Clearance - Medical Quarantine</label>
            </value>
            <value>
                <fullName>動物申請</fullName>
                <label>Custom Clearance - Animal Quarantine</label>
            </value>
            <value>
                <fullName>植物申請</fullName>
                <label>Custom Clearance - Plant Quarantine</label>
            </value>
            <value>
                <fullName>小額</fullName>
                <label>Custom Clearance - Small Invoice Amount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>