force-app/main/default/objects/TariffMaster__c/fields/CUSTOMER__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CUSTOMER</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PRICING</relationshipName>
    <type>Lookup</type>
</CustomField>