force-app/main/default/objects/TariffMaster__c/fields/DangerousClassification__c.field-meta.xml
<CustomField>
    <fullName>DangerousClassification__c</fullName>
    <label>Dangerous Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DangerousClassification</valueSetName>
    </valueSet>
</CustomField>