force-app/main/default/objects/TariffMaster__c/fields/DutyTaxRatio__c.field-meta.xml
<CustomField>
    <fullName>DutyTaxRatio__c</fullName>
    <label>DUTY TAX RATIO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>