force-app/main/default/objects/TariffMaster__c/fields/EngPrintProduct__c.field-meta.xml
<CustomField>
    <fullName>EngPrintProduct__c</fullName>
    <formula>VATInvoiceAtPrintENG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name is automatically dragged from subcategory(Eng), and it appears on English invoice and D/N, C/N</inlineHelpText>
    <label>SERVICE NAME AT PRINT(ENG)</label>
    <type>Text</type>
</CustomField>