force-app/main/default/objects/TariffMaster__c/fields/EngProductSearch__c.field-meta.xml
<CustomField>
    <fullName>EngProductSearch__c</fullName>
    <label>CATEGORY(ENG)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProductSearch__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>FCL Import</fullName>
            </value>
            <value>
                <fullName>FCL Export</fullName>
            </value>
            <value>
                <fullName>FCL Triangular trade</fullName>
            </value>
            <value>
                <fullName>LCL Import</fullName>
            </value>
            <value>
                <fullName>LCL Export</fullName>
            </value>
            <value>
                <fullName>LCL Triangular trade</fullName>
            </value>
            <value>
                <fullName>Import Custom Clearance</fullName>
            </value>
            <value>
                <fullName>Export Custom Clearance</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Drayage</fullName>
            </value>
            <value>
                <fullName>Deliver</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Actual Expense</fullName>
            </value>
            <value>
                <fullName>Oversea Local Charge</fullName>
            </value>
            <value>
                <fullName>Consolidation Cost Allocation</fullName>
            </value>
            <value>
                <fullName>Empty Container</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>