force-app/main/default/objects/TariffMaster__c/fields/EngTani__c.field-meta.xml
<CustomField>
    <fullName>EngTani__c</fullName>
    <label>UNIT(ENG)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UNIT__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>B/L</fullName>
            </value>
            <value>
                <fullName>SHEET</fullName>
            </value>
            <value>
                <fullName>R/TON</fullName>
            </value>
            <value>
                <fullName>CBM</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>CTN</fullName>
            </value>
            <value>
                <fullName>CASE</fullName>
            </value>
            <value>
                <fullName>UNIT</fullName>
            </value>
            <value>
                <fullName>LICENSE</fullName>
            </value>
            <value>
                <fullName>DAY</fullName>
            </value>
            <value>
                <fullName>PALLET</fullName>
            </value>
            <value>
                <fullName>KM</fullName>
            </value>
            <value>
                <fullName>Shipment</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Packet</fullName>
            </value>
            <value>
                <fullName>Piece</fullName>
            </value>
            <value>
                <fullName>Set</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Bill</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>