force-app/main/default/objects/TariffMaster__c/fields/FoodSubCategory__c.field-meta.xml
<CustomField>
    <fullName>FoodSubCategory__c</fullName>
    <label>Food Sub-Catetgory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FoodSubCategory</valueSetName>
    </valueSet>
</CustomField>