force-app/main/default/objects/TariffMaster__c/fields/FREE_DETENTION_EXTENSION__c.field-meta.xml
<CustomField>
    <fullName>FREE_DETENTION_EXTENSION__c</fullName>
    <label>FREE DETENTION EXTENSION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>