force-app/main/default/objects/TariffMaster__c/fields/FSCCSCBuying__c.field-meta.xml
<CustomField>
    <fullName>FSCCSCBuying__c</fullName>
    <label>FSC/SCS(BUYING)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>