force-app/main/default/objects/TariffMaster__c/fields/FSCSCS__c.field-meta.xml
<CustomField>
    <fullName>FSCSCS__c</fullName>
    <label>FSC/SCS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>