force-app/main/default/objects/TariffMaster__c/fields/FSCSCSDetail__c.field-meta.xml
<CustomField>
    <fullName>FSCSCSDetail__c</fullName>
    <label>FSC/SCS DETAIL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>