force-app/main/default/objects/TariffMaster__c/fields/HannyuNouhin__c.field-meta.xml
<CustomField>
    <fullName>HannyuNouhin__c</fullName>
    <label>WAREHOUSE/DELIVER TO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>