force-app/main/default/objects/TariffMaster__c/fields/HSCode__c.field-meta.xml
<CustomField>
    <fullName>HSCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HS CODE</label>
    <referenceTo>HS_Code__c</referenceTo>
    <relationshipName>PRICING</relationshipName>
    <type>Lookup</type>
</CustomField>