force-app/main/default/objects/TariffMaster__c/fields/ISSDetail__c.field-meta.xml
<CustomField>
    <fullName>ISSDetail__c</fullName>
    <label>ISS DETAIL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>