force-app/main/default/objects/TariffMaster__c/fields/IssDetailBuying__c.field-meta.xml
<CustomField>
    <fullName>IssDetailBuying__c</fullName>
    <label>ISS DETAIL(BUYING)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>