force-app/main/default/objects/TariffMaster__c/fields/Kousinbi__c.field-meta.xml
<CustomField>
    <fullName>Kousinbi__c</fullName>
    <label>UPDATE DATE</label>
    <type>Date</type>
</CustomField>