force-app/main/default/objects/TariffMaster__c/fields/Oer500kg__c.field-meta.xml
<CustomField>
    <fullName>Oer500kg__c</fullName>
    <label>+500k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>