force-app/main/default/objects/TariffMaster__c/fields/Over100kgBuying__c.field-meta.xml
<CustomField>
    <fullName>Over100kgBuying__c</fullName>
    <label>+100k(BUYING)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>