force-app/main/default/objects/TariffMaster__c/fields/Over300kg__c.field-meta.xml
<CustomField>
    <fullName>Over300kg__c</fullName>
    <label>+300k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>