force-app/main/default/objects/TariffMaster__c/fields/Over45kgBuying__c.field-meta.xml
<CustomField>
    <fullName>Over45kgBuying__c</fullName>
    <label>+45kg(BUYING)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>