force-app/main/default/objects/TariffMaster__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port Of Discharge</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipName>SERVICE_MASTER_DELIVERY</relationshipName>
    <type>Lookup</type>
</CustomField>