force-app/main/default/objects/TariffMaster__c/fields/PODAOAID__c.field-meta.xml
<CustomField>
    <fullName>PODAOAID__c</fullName>
    <formula>POD__r.Fullname__c</formula>
    <label>P.O.D(A.O.A) ID</label>
    <type>Text</type>
</CustomField>