force-app/main/default/objects/TariffMaster__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port Of Loading</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipName>SERVICE_MASTER_RECEIPT</relationshipName>
    <type>Lookup</type>
</CustomField>