force-app/main/default/objects/TariffMaster__c/fields/POLAODID__c.field-meta.xml
<CustomField>
    <fullName>POLAODID__c</fullName>
    <formula>POL__r.Fullname__c</formula>
    <label>P.O.L(A.O.D) ID</label>
    <type>Text</type>
</CustomField>