force-app/main/default/objects/TariffMaster__c/fields/PricingCode__c.field-meta.xml
<CustomField>
    <fullName>PricingCode__c</fullName>
    <label>PRICING CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>