force-app/main/default/objects/TariffMaster__c/fields/PrintProduct__c.field-meta.xml
<CustomField>
    <fullName>PrintProduct__c</fullName>
    <formula>VATInvoiceAtPrintLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name is automatically dragged from subcategory, and it appears on local invoice</inlineHelpText>
    <label>SERVICE NAME AT PRINT(LOCAL)</label>
    <type>Text</type>
</CustomField>