force-app/main/default/objects/TariffMaster__c/fields/ProductFlag__c.field-meta.xml
<CustomField>
    <fullName>ProductFlag__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Whenever make use of the service master, check the box and make it available.</inlineHelpText>
    <label>SERVICE AVAILABILITY</label>
    <type>Checkbox</type>
</CustomField>