force-app/main/default/objects/TariffMaster__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <displayFormat>S{00000}</displayFormat>
    <label>SERVICE ID</label>
    <type>AutoNumber</type>
</CustomField>