force-app/main/default/objects/TariffMaster__c/fields/ProductSearch__c.field-meta.xml
<CustomField>
    <fullName>ProductSearch__c</fullName>
    <inlineHelpText>This is a key data when you are search the service master from H B/L Selling/Buying and M B/L(Consol)-Buying.</inlineHelpText>
    <label>CATEGORY(LOCAL)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FCL輸入</fullName>
                <label>FCL Import</label>
            </value>
            <value>
                <fullName>FCL輸出</fullName>
                <label>FCL Export</label>
            </value>
            <value>
                <fullName>FCL三国間</fullName>
                <label>FCL Triangular Trade</label>
            </value>
            <value>
                <fullName>LCL輸入</fullName>
                <label>LCL Import</label>
            </value>
            <value>
                <fullName>LCL輸出</fullName>
                <label>LCL Export</label>
            </value>
            <value>
                <fullName>LCL三国間</fullName>
                <label>LCL Triangular Trade</label>
            </value>
            <value>
                <fullName>海外現地費用</fullName>
                <label>Oversea Local Charge</label>
            </value>
            <value>
                <fullName>通関輸入</fullName>
                <label>Import Custom Clearance</label>
            </value>
            <value>
                <fullName>通関輸出</fullName>
                <label>Export Custom Clearance</label>
            </value>
            <value>
                <fullName>エア</fullName>
                <label>AIR</label>
            </value>
            <value>
                <fullName>マスター按分</fullName>
                <label>Consolidation Cost Allocation</label>
            </value>
            <value>
                <fullName>ドレー</fullName>
                <label>Full Container Truck(Drayage)</label>
            </value>
            <value>
                <fullName>配送</fullName>
                <label>Delivery</label>
            </value>
            <value>
                <fullName>倉庫</fullName>
                <label>Warehouse</label>
            </value>
            <value>
                <fullName>実費</fullName>
                <label>Actual Expense</label>
            </value>
            <value>
                <fullName>Empty Container</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>