force-app/main/default/objects/TariffMaster__c/fields/RollupSVCBuyUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupSVCBuyUnitPriceLocal__c</fullName>
    <label>ROLLUP SVC BUYING UNIT PRICE(LOCAL)</label>
    <summarizedField>MRTSVCPricing__c.SVCBuyingUnitPriceLocal__c</summarizedField>
    <summaryForeignKey>MRTSVCPricing__c.SVCPricingID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>