force-app/main/default/objects/TariffMaster__c/fields/RollupSVCBuyUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupSVCBuyUnitPriceUSD__c</fullName>
    <label>ROLLUP SVC BUYING UNIT PRICE(FCY)</label>
    <summarizedField>MRTSVCPricing__c.SVCBuyingUnitPriceUSD__c</summarizedField>
    <summaryForeignKey>MRTSVCPricing__c.SVCPricingID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>