force-app/main/default/objects/TariffMaster__c/fields/RollupSVCSellUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupSVCSellUnitPriceLocal__c</fullName>
    <label>ROLLUP SVC SELLING UNIT PRICE(LOCAL)</label>
    <summarizedField>MRTSVCPricing__c.SVCSellingUnitPriceLocal__c</summarizedField>
    <summaryForeignKey>MRTSVCPricing__c.SVCPricingID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>