force-app/main/default/objects/TariffMaster__c/fields/RollupSVCSellUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupSVCSellUnitPriceUSD__c</fullName>
    <label>ROLLUP SVC SELLING UNIT PRICE(FCY)</label>
    <summarizedField>MRTSVCPricing__c.SVCSellingUnitPriceUSD__c</summarizedField>
    <summaryForeignKey>MRTSVCPricing__c.SVCPricingID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>