force-app/main/default/objects/TariffMaster__c/fields/ROUTE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ROUTE_TYPE__c</fullName>
    <label>ROUTE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>