force-app/main/default/objects/TariffMaster__c/fields/SellAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>SellAmountUSD__c</fullName>
    <inlineHelpText>Input the number and it will be automatically inserted to Unit Price of Selling(USD) in HB/L S/B if the field is blank</inlineHelpText>
    <label>UNIT PRICE OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>