force-app/main/default/objects/TariffMaster__c/fields/SellingAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>SellingAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SELLING ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>PRICING</relationshipName>
    <type>Lookup</type>
</CustomField>