force-app/main/default/objects/TariffMaster__c/fields/Service_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Service_StartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>APPLICATION DATE</label>
    <type>Date</type>
</CustomField>