force-app/main/default/objects/TariffMaster__c/fields/StandardMarginRate__c.field-meta.xml
<CustomField>
    <fullName>StandardMarginRate__c</fullName>
    <label>STANDARD MARGIN RATE%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>